# monitor

src/Resources/: CPU.vala
src/Views/SystemView/: SystemCPUView.vala
tests/: meson.build  runner.vala  test_cpu.vala
